# cpp-modules

module00/: CMakeLists.txt
module00/ex00/: Makefile  megaphone.cpp
module00/ex01/: Contact.cpp  Contact.hpp  Makefile  PhoneBook  PhoneBook.cpp  PhoneBook.hpp  main.cpp
module00/ex02/: Account.cpp  Makefile
module01/: CMakeLists.txt
module01/ex00/: Makefile  Zombie.cpp  Zombie.hpp  main.cpp  newZombie.cpp  randomChump.cpp
module01/ex01/: Makefile  Zombie.cpp  Zombie.hpp  main.cpp  zombieHorde.cpp
module01/ex02/: Makefile  main.cpp
module01/ex03/: HumanA.cpp  HumanA.hpp  HumanB.cpp  HumanB.hpp  Makefile  Weapon.cpp  Weapon.hpp  ex03  main.cpp
module01/ex04/: Makefile  ReplaceForWinner.cpp  ReplaceForWinner.hpp  SedIsForLoser  a.out  main.cpp  test.txt  test.txt.replace
module01/ex05/: Harl.cpp  Harl.hpp  Makefile  main.cpp
module01/ex06/: Harl.cpp  Harl.hpp  Makefile  main.cpp
module02/: CMakeLists.txt
module02/ex00/: Fixed.cpp  Fixed.hpp  Makefile  main.cpp
module02/ex01/: Fixed.cpp  Fixed.hpp  main.cpp
module02/ex02/: Fixed.cpp  main.cpp
module02/ex03/: Fixed.cpp  Fixed.hpp  Makefile  Point.cpp  Point.hpp  bsp.cpp  main.cpp
module03/: CMakeLists.txt
module03/ex00/: ClapTrap.cpp  ClapTrap.hpp  Makefile  main.cpp
module03/ex01/: ClapTrap.cpp  Makefile  ScavTrap.cpp  ScavTrap.hpp  main.cpp
module03/ex02/: ClapTrap.hpp  FragTrap.cpp  FragTrap.hpp  Makefile  ScavTrap.cpp  ScavTrap.hpp  main.cpp
module03/ex03/: DiamondTrap.cpp  DiamondTrap.hpp  FragTrap.cpp  FragTrap.hpp  Makefile  ScavTrap.cpp  ScavTrap.hpp  main.cpp
module04/: CMakeLists.txt
module04/ex00/: Animal.cpp  Cat.cpp  Cat.hpp  Dog.cpp  Dog.hpp  Makefile  WrongAnimal.hpp  WrongCat.cpp  WrongCat.hpp  main.cpp
module04/ex01/: Animal.hpp  Brain.cpp  Brain.hpp  Cat.hpp  Dog.cpp  Dog.hpp  Makefile  WrongAnimal.cpp  main.cpp
module04/ex02/: Animal.cpp  Animal.hpp  Brain.cpp  Cat.cpp  Cat.hpp  Dog.cpp  Dog.hpp  Makefile  WrongCat.cpp  main.cpp
module04/ex03/: AMateria.cpp  AMateria.hpp  Character.cpp  Character.hpp  Cure.cpp  Cure.hpp  ICharacter.hpp  IMateriaSource.hpp  Ice.cpp  Ice.hpp  Makefile  MateriaSource.cpp  MateriaSource.hpp  main.cpp
module05/: CMakeLists.txt
module05/ex00/: Bureaucrat.cpp  Bureaucrat.hpp  Makefile  main.cpp
module05/ex01/: Bureaucrat.cpp  Bureaucrat.hpp  Form.cpp  Form.hpp  Makefile  main.cpp
module05/ex02/: Bureaucrat.cpp  Bureaucrat.hpp  Form.cpp  Makefile  PresidentialPardonForm.cpp  PresidentialPardonForm.hpp  RobotomyRequestForm.cpp  RobotomyRequestForm.hpp  ShrubberyCreationForm.cpp  ShrubberyCreationForm.hpp  main.cpp
module05/ex03/: Form.cpp  Form.hpp  Intern.cpp  Intern.hpp  Makefile  PresidentialPardonForm.cpp  RobotomyRequestForm.cpp  RobotomyRequestForm.hpp  ShrubberyCreationForm.hpp  main.cpp
module06/: CMakeLists.txt
module06/ex00/: Conversion.cpp  Conversion.hpp  Makefile  main.cpp
module06/ex01/: Data.hpp  Makefile  ex01  main.cpp  serializes.cpp
module06/ex02/: A.hpp  B.hpp  Base.cpp  Base.hpp  C.hpp  Makefile  main.cpp
module07/: CMakeLists.txt
module07/ex00/: Makefile  main.cpp  whatever.hpp
module07/ex01/: Makefile  iter.hpp  main.cpp
module07/ex02/: Array.hpp  main.cpp
module08/: CMakeLists.txt
module08/ex00/: easyfind.hpp  main.cpp
module08/ex01/: Makefile  Span.cpp  Span.hpp  main.cpp
module08/ex02/: Makefile  MutantStack.hpp  main.cpp
